methods.basics.Methods.scala.error
Compilation error:
Methods:9: error: '(' expected but '}' found.
}
^